linked rootPage.css to rootPage.html

--- a/htmlFiles/rootPage.html
+++ b/htmlFiles/rootPage.html
@@ -4,10 +4,14 @@
 
     <header>
 
+        <link rel="stylesheet" type="text/css" href="/cssFiles/rootPage.css">
+
     </header>
 
     <body>
+
         Hello world
+
     </body>
 
 </html>
