added table and cells with ids to rootPage.html

--- a/htmlFiles/rootPage.html
+++ b/htmlFiles/rootPage.html
@@ -9,9 +9,18 @@
     </header>
 
     <body>
+        <table>
+            <tbody>
+                <tr>
+                    <td id="tdSongList" >
+                        <p>Song List</p>
+                    </td>
 
-        Hello world
-
+                    <td id="tdVideoPlayer">
+                        <p>Video Player</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
-
 </html>
