added tags and components for song list and video to rootPage.html

--- a/htmlFiles/rootPage.html
+++ b/htmlFiles/rootPage.html
@@ -13,12 +13,28 @@
             <tbody>
                 <tr>
                     <td id="tdSongList" >
-                        <p>Song List</p>
+
+                        <p id="pSongsText">Songs</p>
+
+                        <select id="selectSongsList" size="25">
+                            <option value="song1" selected>Song 1</option>
+                            <option value="song2">Song 2</option>
+                            <option value="song3">Song 3</option>
+                            <option value="song4">Song 4</option>
+                            <option value="song5">Song 5</option>
+                            <option value="song6">Song 6</option>
+                            <option value="song7">Song 7</option>
+                            <option value="song8">Song 8</option>
+                        </select>
                     </td>
 
                     <td id="tdVideoPlayer">
-                        <p>Video Player</p>
+                        <p id="pVideoText">Video Player</p>
+                        <video  id="videoPlayer" controls>
+
+                        </video>
                     </td>
+
                 </tr>
             </tbody>
         </table>
