linked rootPage.js to rootPage.html

--- a/htmlFiles/rootPage.html
+++ b/htmlFiles/rootPage.html
@@ -9,6 +9,9 @@
     </header>
 
     <body>
+
+    <script src="/jsFiles/rootPage.js"></script>
+
         <table>
             <tbody>
                 <tr>
